--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 					<ul>
 						<li><a href="https://bit.ly/2FawDFv">Full post: https://bit.ly/2FawDFv</a></li>
 						<li><a href="http://bit.ly/2HkXOxY">Github repo: http://bit.ly/2HkXOxY</a></li>
+						<li><a href="http://bit.ly/2JCtAYw">These slides: http://bit.ly/2JCtAYw</a></li>
 						<li>Questions?</li>
 					</ul>
         </section>
