--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h1>Leonardo</h1>
 
           <ul>
-            <li>Lead Software Developer @ Thinkific</li>
+            <li>Lead Software Developer @ <a href="https://www.thinkific.com">Thinkific</a></li>
             <li><a href="http://bit.ly/2HoOzgi">www.leonardofaria.net</a></li>
 						<li><a href="http://bit.ly/2F7OXik">@leozera on Twitter</a></li>
             <li><a href="http://bit.ly/2Hp6t2k">leonardofaria on Github</a></li>
@@ -45,8 +45,8 @@
           <h1>Why?</h1>
 
 					<ul>
-            <li>Collaboration between Designers and Devs</li>
-            <li>Consistency between codebases/products</li>
+            <li>Consistency in your UI</li>
+            <li>Consistency between codebases/projects</li>
 						<li>Complexity isolated</li>
           </ul>
 				</section>
@@ -103,6 +103,15 @@
 
 				<section>
           <img src="img/netlify.png">
+				</section>
+
+				<section>
+					<h1>How to publish?</h1>
+
+					<ul>
+						<li>NPM offers private repos for $7/month</li>
+						<li><code>npm install @thinkific/elements-library</code></li>
+					</ul>
 				</section>
 				
 				<section>
