--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
 					<ul>
 						<li>How to show?</li>
+						<li>How to publish?</li>
 						<li>How to improve?</li>
 					</ul>
         </section>
