--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
         </section>
 
 				<section>
+					<img src="img/greenkeeper.png" />
+				</section>
+
+				<section>
           <img src="img/dependencies.io.png" />
         </section>
 
