--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <h1>Why?</h1>
 
 					<ul>
-            <li>Consistency in your UI</li>
+						<li>DRY</li>
+						<li>Improve speed on building features</li>
             <li>Consistency between codebases/projects</li>
-						<li>Complexity isolated</li>
           </ul>
 				</section>
 				
@@ -55,6 +55,7 @@
           <h1>Inspiration?</h1>
 
 					<a href="https://adele.uxpin.com">adele.uxpin.com</a>
+					<a href="https://styleguides.io">styleguides.io</a>
         </section>
 
 				<section>
